<resources>
    <string name="app_name">Nicknames</string>
    <string name="navigation_people">People</string>
    <string name="navigation_fantasy">Fantasy</string>
    <string name="navigation_elves">Elves</string>
    <string name="navigation_dwarves">Dwarves</string>
    <string name="navigation_orcs">Orcs</string>
    <string name="navigation_male">Male names</string>
    <string name="navigation_female">Female names</string>
    <string name="navigation_latin">Latin</string>
    <string name="navigation_cyrillic">Cyrillic</string>
    <string name="text_length">Nickname length</string>
    <string name="text_tap">Tap to get new a nickname</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_copied">Nickname is copied to clipboard.</string>
</resources>
