<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/navigation_people">
        <menu>
            <item
                android:id="@+id/navigation_male"
                android:title="@string/navigation_male"
                android:icon="@drawable/ic_label_grey600_24dp"/>
            <item
                android:id="@+id/navigation_female"
                android:title="@string/navigation_female"
                android:icon="@drawable/ic_label_grey600_24dp"/>
        </menu>
    </item>
    <item android:title="@string/navigation_fantasy">
        <menu>
            <item
                android:id="@+id/navigation_elves"
                android:title="@string/navigation_elves"
                android:icon="@drawable/ic_label_grey600_24dp"/>
            <item
                android:id="@+id/navigation_dwarves"
                android:title="@string/navigation_dwarves"
                android:icon="@drawable/ic_label_grey600_24dp"/>
            <item
                android:id="@+id/navigation_orcs"
                android:title="@string/navigation_orcs"
                android:icon="@drawable/ic_label_grey600_24dp"/>
        </menu>
    </item>
</menu>
